// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextField /> component onBlur event should have error state with error message 1`] = `
.emotion-0 {
  display: block;
  height: auto;
  width: 100%;
  position: relative;
}

.emotion-2 {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.25rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #FF494A;
  cursor: inherit;
  left: 15px;
  top: 15px;
  position: absolute;
  -webkit-transform: translateY(0);
  -moz-transform: translateY(0);
  -ms-transform: translateY(0);
  transform: translateY(0);
  -webkit-transition: -webkit-transform 150ms ease-out,font-size 150ms ease-out;
  transition: transform 150ms ease-out,font-size 150ms ease-out;
}

.emotion-4 {
  font-weight: 400;
  font-size: 0.75rem;
  line-height: 1rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #FF494A;
}

.emotion-6 {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.25rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  background-color: #FFFFFF;
  border-radius: 0px;
  border: 1px solid #FF494A;
  color: #454545;
  min-width: 198px;
  padding: 20px 15px 5px 15px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  height: 53px;
}

.emotion-6:focus {
  outline: 1px solid #00677F;
  border: 1px solid transparent;
}

.emotion-8 {
  padding-left: 15px;
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <label
      class="emotion-2 emotion-3"
      data-testid="label-field"
      for="Some-text"
    >
      Some text
      <span
        class="emotion-4 emotion-5"
        color="error.default"
        data-testid="typography"
      >
        *
      </span>
    </label>
    <input
      class="emotion-6 emotion-7"
      id="Some-text"
      name="Some-text"
      required=""
      type="text"
      value=""
    />
    <div
      class="emotion-8 emotion-9"
    >
      <span
        class="emotion-4 emotion-5"
        color="error.default"
        data-testid="typography"
      >
        This field is required.
      </span>
    </div>
  </div>
</div>
`;

exports[`<TextField /> component renders Loading input 1`] = `
@keyframes animation-0 {
  from {
    -webkit-transform: rotate(0);
    -moz-transform: rotate(0);
    -ms-transform: rotate(0);
    transform: rotate(0);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.emotion-0 {
  display: block;
  height: auto;
  width: 100%;
  position: relative;
}

.emotion-2 {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.25rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #454545;
  cursor: inherit;
  left: 15px;
  top: 15px;
  position: absolute;
  -webkit-transform: translateY(0);
  -moz-transform: translateY(0);
  -ms-transform: translateY(0);
  transform: translateY(0);
  -webkit-transition: -webkit-transform 150ms ease-out,font-size 150ms ease-out;
  transition: transform 150ms ease-out,font-size 150ms ease-out;
}

.emotion-4 {
  position: absolute;
  right: 15px;
  top: 15px;
  width: 24px;
  height: 24px;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-8 {
  width: 32px;
  height: 32px;
  border: 2px solid #838383;
  border-radius: 50%;
  border-top: 2px solid #FFFFFF;
  -webkit-animation: animation-0 1s cubic-bezier(0.3, 0.1, 0.25, 0.65) 0s infinite normal none;
  animation: animation-0 1s cubic-bezier(0.3, 0.1, 0.25, 0.65) 0s infinite normal none;
}

.emotion-10 {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.25rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  background-color: #FFFFFF;
  border-radius: 0px;
  border: 1px solid #DEDEDE;
  color: #454545;
  min-width: 198px;
  padding: 20px 15px 5px 15px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  height: 53px;
}

.emotion-10:focus {
  outline: 1px solid #00677F;
  border: 1px solid transparent;
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <label
      class="emotion-2 emotion-3"
      data-testid="label-field"
      for="My-disabled-input"
    >
      My disabled input
    </label>
    <span
      class="emotion-4 emotion-5"
    >
      <div
        class="emotion-6 emotion-7"
        data-testid="spinner"
        style="margin: auto;"
      >
        <div
          class="emotion-8 emotion-9"
        />
      </div>
    </span>
    <input
      class="emotion-10 emotion-11"
      id="My-disabled-input"
      name="My-disabled-input"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`<TextField /> component renders disabled input 1`] = `
.emotion-0 {
  display: block;
  height: auto;
  width: 100%;
  position: relative;
}

.emotion-2 {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.25rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #C1C1C1;
  cursor: inherit;
  left: 15px;
  top: 15px;
  position: absolute;
  -webkit-transform: translateY(0);
  -moz-transform: translateY(0);
  -ms-transform: translateY(0);
  transform: translateY(0);
  -webkit-transition: -webkit-transform 150ms ease-out,font-size 150ms ease-out;
  transition: transform 150ms ease-out,font-size 150ms ease-out;
}

.emotion-4 {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.25rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  background-color: #FFFFFF;
  border-radius: 0px;
  border: 1px solid #F3F3F3;
  color: #C1C1C1;
  min-width: 198px;
  padding: 20px 15px 5px 15px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  height: 53px;
}

.emotion-4:focus {
  outline: 1px solid #00677F;
  border: 1px solid transparent;
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <label
      class="emotion-2 emotion-3"
      data-testid="label-field"
      disabled=""
      for="My-disabled-input"
    >
      My disabled input
    </label>
    <input
      class="emotion-4 emotion-5"
      disabled=""
      id="My-disabled-input"
      name="My-disabled-input"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`<TextField /> component renders input with side button 1`] = `
.emotion-0 {
  display: block;
  height: auto;
  width: 100%;
  position: relative;
}

.emotion-2 {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.25rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #454545;
  cursor: inherit;
  left: 15px;
  top: 15px;
  position: absolute;
  -webkit-transform: translateY(0);
  -moz-transform: translateY(0);
  -ms-transform: translateY(0);
  transform: translateY(0);
  -webkit-transition: -webkit-transform 150ms ease-out,font-size 150ms ease-out;
  transition: transform 150ms ease-out,font-size 150ms ease-out;
}

.emotion-4 {
  position: absolute;
  right: 15px;
  top: 15px;
  width: 24px;
  height: 24px;
}

.emotion-6 {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.25rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  background-color: #FFFFFF;
  border-radius: 0px;
  border: 1px solid #DEDEDE;
  color: #454545;
  min-width: 198px;
  padding: 20px 15px 5px 15px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  height: 53px;
}

.emotion-6:focus {
  outline: 1px solid #00677F;
  border: 1px solid transparent;
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <label
      class="emotion-2 emotion-3"
      data-testid="label-field"
      for="My-input"
    >
      My input
    </label>
    <span
      class="emotion-4 emotion-5"
    >
      <button
        type="button"
      >
        My button
      </button>
    </span>
    <input
      class="emotion-6 emotion-7"
      id="My-input"
      name="My-input"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`<TextField /> component should render the TextField with error styles and message 1`] = `
.emotion-0 {
  display: block;
  height: auto;
  width: 100%;
  position: relative;
}

.emotion-2 {
  font-weight: 400;
  font-size: 0.75rem;
  line-height: 1rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #FF494A;
  cursor: inherit;
  left: 15px;
  top: 15px;
  position: absolute;
  -webkit-transform: translateY(-45%);
  -moz-transform: translateY(-45%);
  -ms-transform: translateY(-45%);
  transform: translateY(-45%);
  -webkit-transition: -webkit-transform 150ms ease-out,font-size 150ms ease-out;
  transition: transform 150ms ease-out,font-size 150ms ease-out;
}

.emotion-4 {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.25rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  background-color: #FFFFFF;
  border-radius: 0px;
  border: 1px solid #FF494A;
  color: #454545;
  min-width: 198px;
  padding: 20px 15px 5px 15px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  height: 53px;
}

.emotion-4:focus {
  outline: 1px solid #00677F;
  border: 1px solid transparent;
}

.emotion-6 {
  padding-left: 15px;
}

.emotion-8 {
  font-weight: 400;
  font-size: 0.75rem;
  line-height: 1rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #FF494A;
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <label
      class="emotion-2 emotion-3"
      data-testid="label-field"
      for="My-Input-with-Error-Message"
    >
      My Input with Error Message
    </label>
    <input
      class="emotion-4 emotion-5"
      id="My-Input-with-Error-Message"
      name="My-Input-with-Error-Message"
      type="text"
      value="Initial Value"
    />
    <div
      class="emotion-6 emotion-7"
    >
      <span
        class="emotion-8 emotion-9"
        color="error.default"
        data-testid="typography"
      >
        My Error Message
      </span>
    </div>
  </div>
</div>
`;

exports[`<TextField /> component should render the TextField with info message 1`] = `
.emotion-0 {
  display: block;
  height: auto;
  width: 100%;
  position: relative;
}

.emotion-2 {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.25rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #454545;
  cursor: inherit;
  left: 15px;
  top: 15px;
  position: absolute;
  -webkit-transform: translateY(0);
  -moz-transform: translateY(0);
  -ms-transform: translateY(0);
  transform: translateY(0);
  -webkit-transition: -webkit-transform 150ms ease-out,font-size 150ms ease-out;
  transition: transform 150ms ease-out,font-size 150ms ease-out;
}

.emotion-4 {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.25rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  background-color: #FFFFFF;
  border-radius: 0px;
  border: 1px solid #DEDEDE;
  color: #454545;
  min-width: 198px;
  padding: 20px 15px 5px 15px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  height: 53px;
}

.emotion-4:focus {
  outline: 1px solid #00677F;
  border: 1px solid transparent;
}

.emotion-6 {
  padding-left: 15px;
}

.emotion-8 {
  font-weight: 400;
  font-size: 0.75rem;
  line-height: 1rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #838383;
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <label
      class="emotion-2 emotion-3"
      data-testid="label-field"
      for="My-Input-with-info-message"
    >
      My Input with info message
    </label>
    <input
      class="emotion-4 emotion-5"
      id="My-Input-with-info-message"
      name="My-Input-with-info-message"
      type="text"
      value=""
    />
    <div
      class="emotion-6 emotion-7"
    >
      <span
        class="emotion-8 emotion-9"
        color="content.medium"
        data-testid="typography"
      >
        My Infor Message
      </span>
    </div>
  </div>
</div>
`;
